--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <div class="row header justify-content-center align-items-center">
       <div class="col-1">
       </div>
-      <div class="col-md-3">
+      <div class="col-lg-3">
         <h1 class="border border-dark p-3 mx-5 mt-2 mt-lg-0 ml-lg-5">СОЮЗ ИСПОЛНИТЕЛЕЙ ГОРЛОВОГО ПЕНИЯ ХӨӨМЕЙ РЕСПУБЛИКИ ТЫВА</h1>
       </div>
-      <div class="col-md-8">
+      <div class="col-lg-8">
         <img class="img-fluid main-image" src="images\opening-bg-1.png" alt="">
       </div>
     </div>
