header expand - clear, fonts in rems

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h1 class="border border-dark p-3 mx-5 mt-2 mt-lg-0 ml-lg-5">СОЮЗ ИСПОЛНИТЕЛЕЙ ГОРЛОВОГО ПЕНИЯ ХӨӨМЕЙ РЕСПУБЛИКИ ТЫВА</h1>
       </div>
       <div class="col-lg-8">
-        <img class="img-fluid main-image" src="images\opening-bg-1.png" alt="">
+        <img class="img-fluid main-image pb-2" src="images\opening-bg-1.png" alt="">
       </div>
     </div>
     <!-- main-image -->
@@ -66,7 +66,7 @@
 
   <!-- contents -->
   <div class="container-fluid news-preview mt-5">
-    <div class="row news-header ">
+    <div class="row news-header">
       <div class="col-12 col-lg-8">
         <section class="article border p-5 m-5">
           <div class="row article-header align-items-center">
@@ -106,8 +106,8 @@
         <div class="image-cropper">
           <img src="images\ayan-shirizhik.jpg" alt="avatar" class="profile-pic">
         </div>
-        <div class="greeting">
-          <h3 class="mt-3 pt-4 pb-3">Дорогие друзья! Уважаемые гости нашего сайта!</h3>
+        <div class="greeting mr-5">
+          <h3 class="mt-3 pt-4 pb-3 px-3">Дорогие друзья! Уважаемые гости нашего сайта!</h3>
           <p class="px-5">Счастлив приветствовать всех вас на официальном сайте нашей общественной организации «Союз исполнителей горлового пения хөөмей Республики Тыва»! На нашем сайте вы сможете найти ответы на многие интересующие вас вопросы по поводу тувинского горлового пения хөөмей, узнать о работе Союза хөөмейжи Тувы, о проектах, новостях, мероприятиях, встречах и многое другое.
               Мы гордимся тем, что являемся хранителями и носителями уникального искусства хөөмей. Наша деятельность направлена на сохранение и развитие лучших традиций тувинского горлового пения, выявление и поддержку молодых талантливых хөөмейжи, созданию благоприятных условий для обмена опытом и повышения профессионального уровня хѳѳмейжи, укреплению международных культурных связей и установлению творческих контактов.
               Дорогие друзья! Призываю всех вас бережно относиться к духовному культурному наследию тувинского народа и изучать мир тувинской культуры и традиционной музыки!
