--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Документы
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu docs dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="uploads\Ustav.pdf">Устав</a>
               <a class="dropdown-item" href="uploads\Svidetelstvo_o_registratsii_yuridicheskogo_litsa.pdf">Свидетельство о регистрации юридического лица</a>
               <a class="dropdown-item" href="uploads\Svidetelstvo_o_rgistratsii_nekommercheskoy_organizatsii_1.pdf">Свидетельство о регистрации некоммерческой организации</a>
