--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     </div>
   </div>
   <footer class="page-footer font-small pt-4">
-  <div class="container-fluid text-center text-md-left">
+  <div class="container-fluid text-center text-lg-left">
     <div class="row">
-      <div class="col-md-4 mt-md-0 mt-3">
+      <div class="col-lg-4 mt-md-0 mt-3">
         <div class="row align-items-center">
           <div class="col-4">
             <img class="logo ml-5" src="images\hoomeyzhi.png" alt="">
@@ -135,7 +135,7 @@
         </div>
       </div>
       <hr class="clearfix w-100 d-md-none pb-3">
-      <div class="col-md-3 mb-md-0 mb-3">
+      <div class="col-lg-3 mb-md-0 mb-3">
         <h5 class="text-uppercase">Партнёры</h5>
 
         <ul class="list-unstyled">
@@ -150,7 +150,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-5 mb-md-0 mb-3">
+      <div class="col-lg-5 mb-md-0 mb-3">
         <h5 class="text-uppercase">Контакты</h5>
 
         <ul class="list-unstyled">
