--- a/about/soyuz-hoomey-about.html
+++ b/about/soyuz-hoomey-about.html
@@ -34,7 +34,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Документы
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu docs dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="..\uploads\Ustav.pdf">Устав</a>
               <a class="dropdown-item" href="..\uploads\Svidetelstvo_o_registratsii_yuridicheskogo_litsa.pdf">Свидетельство о регистрации юридического лица</a>
               <a class="dropdown-item" href="..\uploads\Svidetelstvo_o_rgistratsii_nekommercheskoy_organizatsii_1.pdf">Свидетельство о регистрации некоммерческой организации</a>
@@ -64,6 +64,7 @@
             На сегодня в Республике Тува развитием, сохранением и популяризацией тувинского горлового пения занимается Общественная организация «Союз исполнителей горлового пения хөөмей Республики Тыва» (далее – Союз хоомейжи), созданный добровольным объединением хөөмейжи Тувы в 2014 году.
             С момента создания Союз хөөмейжи ведет целенаправленную деятельность по сохранению и развитию лучших традиций исполнительских школ хөөмея, выявлению и поддержке молодых талантливых исполнителей тувинского горлового пения, созданию благоприятных условий для обмена опытом и повышения профессионального уровня хѳѳмейжи, укреплению международных культурных связей и установлению творческих контактов. Все официальные полномочия Союза хоомейжи полностью отражены в его Уставе, который можно посмотреть по ссылке. Членами Союза хөөмейжи являются учителя детских школ искусств, преподаватели средних и высших учебных заведений, молодые ученые, мастера народно-художественных промыслов и декоративно-прикладного искусства, представители тувинского традиционного спорта, заслуженные артисты Российской Федерации и Республики Тыва, народные хөөмейжи Республики Тыва, профессиональные музыканты Тувинского национального оркестра, солисты фольклорных ансамблей (обладатели почетного звания «Гордость тувинского народа» ансамбль «Хун-Хурту», обладатели премии Правительства Российской Федерации «Душа России» ансамбль «Чиргилчин», обладатели «Grаmmy» ансамбль «Алаш», всемирно известный фольклор-этнографический ансамбль «Тыва» и тд.), представители молодого поколения хөөмейжи (ансамбли «Khoomei Beat», «Одучу», «Эзеңги»).
           </p>
+          <a class="btn btn-outline-info" href="index.html" type="button" name="button">На главную</a>
           </section>
         </div>
      </div>
@@ -71,9 +72,9 @@
 
     <!-- footer -->
     <footer class="page-footer font-small pt-4">
-    <div class="container-fluid text-center text-md-left">
+    <div class="container-fluid text-center text-lg-left">
       <div class="row">
-        <div class="col-md-4 mt-md-0 mt-3">
+        <div class="col-lg-4 mt-md-0 mt-3">
           <div class="row align-items-center">
             <div class="col-4">
               <img class="logo ml-5" src="..\images\hoomeyzhi.png" alt="">
@@ -85,7 +86,7 @@
           </div>
         </div>
         <hr class="clearfix w-100 d-md-none pb-3">
-        <div class="col-md-3 mb-md-0 mb-3">
+        <div class="col-lg-3 mb-md-0 mb-3">
           <h5 class="text-uppercase">Партнёры</h5>
 
           <ul class="list-unstyled">
@@ -100,7 +101,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-5 mb-md-0 mb-3">
+        <div class="col-lg-5 mb-md-0 mb-3">
           <h5 class="text-uppercase">Контакты</h5>
 
           <ul class="list-unstyled">
