--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     </div>
   </div>
-  <footer class="page-footer font-small pt-4">
+  <footer class="page-footer pt-4">
   <div class="container-fluid text-center text-lg-left">
     <div class="row">
       <div class="col-lg-4 mt-md-0 mt-3">
