--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
   <div class="container-fluid news-preview mt-5">
     <div class="row news-header">
       <div class="col-12 col-lg-8">
+
+        <section class="article border p-5 m-5">
+          <div class="row article-header align-items-center">
+            <div class="col-5">
+              <img src="images\some-video.mp4_snapshot.jpg" alt="Какое-то видео">
+            </div>
+            <div class="col-7">
+              <h2>Какое-то видео</h2>
+              <p class="date">13.07.2020</p>
+            </div>
+          </div>
+          <p class="mt-3">Дорогие друзья! Представляем вашему вниманию наше новое видео "Какое-то видео"! Приятного просмотра!
+          </p>
+          <a class="btn btn-outline-info" href="articles\some-video.html" type="button" name="button">Больше</a>
+        </section>
+
         <section class="article border p-5 m-5">
           <div class="row article-header align-items-center">
             <div class="col-5">
@@ -84,6 +100,7 @@
           </p>
           <a class="btn btn-outline-info" href="articles\maralyonok-open.html" type="button" name="button">Больше</a>
         </section>
+
         <section class="article border p-5 m-5">
           <div class="row article-header align-items-center">
             <div class="col-5">
