--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="opening">
 
       <!-- navbar -->
-      <nav class="navbar sticky-top navbar-expand-lg pt-1">
+      <nav class="navbar sticky-top navbar-expand-xl pt-1">
       <a class="navbar-brand ml-4" href="index.html">Тыва Хөөмейжилер Эвилели</a>
       <button class="navbar-toggler collapsed" type="button" data-target="#navbarSupportedContent" data-toggle="collapse" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
         <span class="line"></span>
@@ -23,11 +23,20 @@
 
       <div class="collapse navbar-collapse justify-content-end mr-5" id="navbarSupportedContent">
         <ul class="navbar-nav">
+          <li class="nav-item mr-xl-5" id="saradak">
+            <a class="nav-link" href="saradak\saradak.html">Маралёнок-2020</a>
+          </li>
           <li class="nav-item mr-2">
             <a class="nav-link active" href="index.html">Главная</a>
           </li>
           <li class="nav-item mr-2">
             <a class="nav-link" href="news\news.html">Новости</a>
+          </li>
+          <li class="nav-item mr-2">
+            <a class="nav-link" href="articles\smi.html">СМИ о нас</a>
+          </li>
+          <li class="nav-item mr-2">
+            <a class="nav-link" href="news\media.html">Медиа</a>
           </li>
           <li class="nav-item mr-2">
             <a class="nav-link" href="about\soyuz-hoomey-about.html">О Союзе</a>
@@ -66,22 +75,22 @@
 
   <!-- contents -->
   <div class="container-fluid news-preview mt-5">
-    <div class="row news-header">
-      <div class="col-12 col-lg-8">
+    <div class="row news-header justify-content-center">
+      <div class="col-12 col-lg-6">
 
         <section class="article border p-5 m-5">
           <div class="row article-header align-items-center">
             <div class="col-5">
-              <img src="images\some-video.mp4_snapshot.jpg" alt="Какое-то видео">
+              <img src="images\saradak-participant.jpg" alt="Участник конкурса хөөмей">
             </div>
             <div class="col-7">
-              <h2>Какое-то видео</h2>
+              <h2>Тува24 - Сылдысчыгаш</h2>
               <p class="date">13.07.2020</p>
             </div>
           </div>
-          <p class="mt-3">Дорогие друзья! Представляем вашему вниманию наше новое видео "Какое-то видео"! Приятного просмотра!
+          <p class="mt-3">Материал о конкурсе детского хөөмея на телеканале Тува24
           </p>
-          <a class="btn btn-outline-info" href="articles\some-video.html" type="button" name="button">Больше</a>
+          <a class="btn btn-outline-info" href="articles\smi.html" type="button" name="button">Больше</a>
         </section>
 
         <section class="article border p-5 m-5">
@@ -119,11 +128,11 @@
         </section>
 
       </div>
-      <div class="col-4 d-none d-lg-block">
+      <div class="col-12 col-lg-3">
         <div class="image-cropper">
           <img src="images\ayan-shirizhik.jpg" alt="avatar" class="profile-pic">
         </div>
-        <div class="greeting mr-5">
+        <div class="greeting mx-5 ml-lg-0">
           <h3 class="mt-3 pt-4 pb-3 px-3">Дорогие друзья! Уважаемые гости нашего сайта!</h3>
           <p class="px-5">Счастлив приветствовать всех вас на официальном сайте нашей общественной организации «Союз исполнителей горлового пения хөөмей Республики Тыва»! На нашем сайте вы сможете найти ответы на многие интересующие вас вопросы по поводу тувинского горлового пения хөөмей, узнать о работе Союза хөөмейжи Тувы, о проектах, новостях, мероприятиях, встречах и многое другое.
               Мы гордимся тем, что являемся хранителями и носителями уникального искусства хөөмей. Наша деятельность направлена на сохранение и развитие лучших традиций тувинского горлового пения, выявление и поддержку молодых талантливых хөөмейжи, созданию благоприятных условий для обмена опытом и повышения профессионального уровня хѳѳмейжи, укреплению международных культурных связей и установлению творческих контактов.
@@ -196,7 +205,7 @@
           </li>
           <li>
             <div>Координатор проекта Бадыраа Шурумаа Григорьевна:
-              <a href="8-923-386-66-61"> 8(923)386-66-61</a>
+              <a href="8-923-380-66-61"> 8(923)380-66-61</a>
             </div>
           </li>
         </ul>
