--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 
   <!-- contents -->
   <div class="container-fluid news-preview mt-5">
-    <div class="row news-header justify-content-center">
+    <div class="row justify-content-center">
       <div class="col-12 col-lg-6">
+        <h2 class="page-header mt-5">НОВЫЕ МАТЕРИАЛЫ</h2>
 
         <section class="article border p-5 m-5">
           <div class="row article-header align-items-center">
