--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse justify-content-end mr-5" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mr-xl-5" id="saradak">
-            <a class="nav-link" href="..\saradak\saradak.html">Маралёнок-2020</a>
+            <a class="nav-link  active" href="..\saradak\saradak.html">Маралёнок-2020</a>
           </li>
           <li class="nav-item mr-2">
             <a class="nav-link" href="..\index.html">Главная</a>
@@ -34,7 +34,7 @@
             <a class="nav-link" href="..\articles\smi.html">СМИ о нас</a>
           </li>
           <li class="nav-item mr-2">
-            <a class="nav-link active" href="..\news\media.html">Медиа</a>
+            <a class="nav-link" href="..\news\media.html">Медиа</a>
           </li>
           <li class="nav-item mr-2">
             <a class="nav-link" href="..\about\soyuz-hoomey-about.html">О Союзе</a>
@@ -57,27 +57,7 @@
 
     <div class="container-fluid news-preview py-3">
       <div class="row justify-content-center mx-5">
-        <h2 class="page-header mt-5">ФОТО И ВИДЕО</h2>
-
-        <div class="col-12 col-lg-5 col-xl-3 card m-2">
-          <img src="..\images\saradak-participant.jpg" class="card-img-top img-fluid mt-3" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Тува24 - Сылдысчыгаш</h5>
-            <p class="card-text">Материал о конкурсе детского хөөмея на телеканале Тува24</p>
-            <a class="btn btn-outline-info" href="..\articles\smi.html" type="button" name="button">Больше</a>
-          </div>
-        </div>
-
-        <div class="col-12 col-lg-5 col-xl-3 card m-2">
-          <img src="..\images\saradak-archive.jpg" class="card-img-top img-fluid mt-3" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Медээлер Тыва черде - Сарадак</h5>
-            <p class="card-text">Медээлер Тыва черде - «Сарадак» хөөмейжилер мөөрейи дугайында.</p>
-            <a class="btn btn-outline-info" href="..\articles\smi.html#smi-1" type="button" name="button">Больше</a>
-          </div>
-        </div>
-
-
+        <h2 class="page-header mt-5">ЗДЕСЬ ПОКА НИЧЕГО НЕТ</h2>
 
         </div>
      </div>
