--- a/index.html
+++ b/index.html
@@ -97,6 +97,21 @@
         <section class="article border p-5 m-5">
           <div class="row article-header align-items-center">
             <div class="col-5">
+              <img src="images\saradak-archive.jpg" alt="Участник конкурса хөөмей">
+            </div>
+            <div class="col-7">
+              <h2>Медээлер Тыва черде - Сарадак</h2>
+              <p class="date">23.06.2020</p>
+            </div>
+          </div>
+          <p class="mt-3">Медээлер Тыва черде - «Сарадак» хөөмейжилер мөөрейи дугайында.
+          </p>
+          <a class="btn btn-outline-info" href="articles\smi.html#smi-1" type="button" name="button">Больше</a>
+        </section>
+
+        <section class="article border p-5 m-5">
+          <div class="row article-header align-items-center">
+            <div class="col-5">
               <img src="images\saradak.jpg" alt="Афиша конкурса «Маралёнок»">
             </div>
             <div class="col-7">
