--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="..\images\icon.jpg">
     <link href="..\styles\bootstrap.css" rel="stylesheet" type="text/css">
     <link href="..\styles\soyuz-hoomey.css" rel="stylesheet" type="text/css">
+    <link href="..\styles\saradak.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -21,8 +22,8 @@
 
       <div class="collapse navbar-collapse justify-content-end mr-5" id="navbarSupportedContent">
         <ul class="navbar-nav">
-          <li class="nav-item mr-xl-5" id="saradak">
-            <a class="nav-link  active" href="..\saradak\saradak.html">Маралёнок-2020</a>
+          <li class="nav-item mr-xl-5">
+            <a class="nav-link active" id="saradak" href="..\saradak\saradak.html">Маралёнок-2020</a>
           </li>
           <li class="nav-item mr-2">
             <a class="nav-link" href="..\index.html">Главная</a>
@@ -55,89 +56,71 @@
     </nav>
     <!-- navbar -->
 
-    <div class="container-fluid news-preview py-3">
-      <div class="row justify-content-center mx-5">
-        <h2 class="page-header mt-5">ЗДЕСЬ ПОКА НИЧЕГО НЕТ</h2>
-
-        </div>
-     </div>
-    <!-- article -->
-
-    <!-- footer -->
-    <footer class="page-footer font-small pt-4">
-    <div class="container-fluid text-center text-lg-left">
-      <div class="row">
-        <div class="col-lg-4 mt-md-0 mt-3">
-          <div class="row align-items-center">
-            <div class="col-4">
-              <img class="logo ml-5" src="..\images\hoomeyzhi.png" alt="">
+    <!-- contents -->
+    <div class="container-fluid saradak-page py-3">
+      <!-- header -->
+      <div class="saradak-header">
+        <h2 class="page-header">Детский конкурс исполнителей хөөмей САРАДАК-2020</h2>
+      </div>
+      <!-- row -->
+      <div class="row saradak-player justify-content-center">
+          <!-- participants -->
+          <div class="col-12 col-lg-4">
+            <div class="participant-list">
+              <h5>Участники</h5>
+              <ol>
+                <li class="participant">Хомушку Кан-Демир Радомирович</li>
+                <li class="participant">Чамбал Кудерек Дажынович</li>
+                <li class="participant">Аракчаа Угер Артышович</li>
+                <li class="participant">Ооржак Сергек Анчы-оолович</li>
+                <li class="participant">Куулар Кан-Демир Вадимович</li>
+                <li class="participant">Донгак Сайын-Белек Дашович</li>
+                <li class="participant">Монгуш Тамчат Радомирович</li>
+                <li class="participant">Демир-оол Аржаан Александрорвич</li>
+                <li class="participant">Шинин Алдынай Владьевна </li>
+                <li class="participant">Сагды Айдыс Артышович</li>
+                <li class="participant">Кунаажап Аяс Мергенович</li>
+                <li class="participant">Кужугет Синухед Станиславович</li>
+                <li class="participant">Аптыы Милан Альбертович</li>
+                <li class="participant">Серенот Кудерек Шолбанович</li>
+                <li class="participant">Монгуш Нарын-Белек Аясович</li>
+                <li class="participant">Тюлюш Айыс Валентинович</li>
+                <li class="participant">Чозуту Отчугаш Орланович </li>
+                <li class="participant">Суван Айыр-Санаа Мергенович</li>
+                <li class="participant">Чооду Шалбачы Начын Оглу </li>
+                <li class="participant">Чооду Окчаа Начын Оглу</li>
+                <li class="participant">Монгуш Айыс Анчыевич</li>
+                <li class="participant">Дамбыл Айслан Айдынович</li>
+                <li class="participant">Санчы Саян Адар-оолвич</li>
+                <li class="participant">Лапчар Очур Борисович</li>
+                <li class="participant">Нанзал Анчы-Кара Артурович</li>
+                <li class="participant">Монгуш Эртине Аясович</li>
+                <li class="participant">Энге Ай-Хаан Вадимович</li>
+                <li class="participant">Суктер Батый Эрендейевич</li>
+                <li class="participant">Ондар Шимит Леняевич</li>
+                <li class="participant">Ховалыг Аржаан Шыргай-оолович</li>
+                <li class="participant">Бегзи Очур Буянович</li>
+                <li class="participant">Минчей Аюш Владимирович</li>
+                <li class="participant">Натпит-оол Алтангэрэл Юрьевич</li>
+                <li class="participant">Ооржак Эритне Анчы-оолович</li>
+                <li class="participant">Сарыглар Ай-Маадыр Аликович</li>
+                <li class="participant">Чулдум-оол Айбес Айдынович</li>
+              </ol>
             </div>
-            <div class="col-8">
-              <h5 class="text-uppercase">Общественная организация</h5>
-              <p>«Союз исполнителей горлового пения хөөмей Республики Тыва»</p>
+          </div>
+          <!-- video -->
+          <div class="col-12 col-lg-8">
+            <div class="video-box">
+              <iframe class="video" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
-        <hr class="clearfix w-100 d-md-none pb-3">
-        <div class="col-lg-3 mb-md-0 mb-3">
-          <h5 class="text-uppercase">Партнёры</h5>
+     </div>
 
-          <ul class="list-unstyled">
-            <li>
-              <a href="http://tuvancenter.com">Центр развития тувинской традиционной культуры</a>
-            </li>
-            <li>
-              <a href="http://tnotuva.ru">ГБУ «Тувинский национальный оркестр»</a>
-            </li>
-            <li>
-              <a href="http://www.khoomey.ru">Международный научный центр «Хоомей»</a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-lg-5 mb-md-0 mb-3">
-          <h5 class="text-uppercase">Контакты</h5>
-
-          <ul class="list-unstyled">
-            <li>
-              <span>Адрес: 667000, Республика Тыва, г. Кызыл, ул. Ленина, д.7</span>
-            </li>
-            <li>
-              <div>Официальный сайт:
-                <a href="http://edu-aygor.ru/"> http://edu-aygor.ru</a>
-              </div>
-            </li>
-            <li>
-              <div>Электронная почта:
-                <a href="mailto:soyuz.khoomeyzhi@mail.ru"> soyuz.khoomeyzhi@mail.ru</a>
-              </div>
-            </li>
-            <li>
-              <div>Контактный телефон:
-                <a href="tel:83942223571"> 8(39422)2–35-71</a>
-              </div>
-            </li>
-            <li>
-              <div>Зам.председателя Монгуш Адыгжы Кузен-оолович:
-                <a href="tel:8-983—516-31-97"> 8(983)516-31-97</a>
-              </div>
-            </li>
-            <li>
-              <div>Координатор проекта Бадыраа Шурумаа Григорьевна:
-                <a href="8-923-386-66-61"> 8(923)386-66-61</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://vk.com/tuvacenter"> Центр развития тувинской традиционной культуры</a>
-    </div>
-  </footer>
-  <!-- footer -->
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="..\script\bootstrap.js" type="text/javascript"></script>
+  <script src="..\script\saradak.js" type="text/javascript"></script>
   </body>
 </html>
