--- a/index.html
+++ b/index.html
@@ -82,6 +82,21 @@
         <section class="article border p-5 m-5">
           <div class="row article-header align-items-center">
             <div class="col-5">
+              <img src="images\saradak-bg.jpg" alt="Участник конкурса хөөмей">
+            </div>
+            <div class="col-7">
+              <h2>САРАДАК-2020</h2>
+              <p class="date">17.07.2020</p>
+            </div>
+          </div>
+          <p class="mt-3">Видео-выступления участников детского конкурса исполнителей хөөмей САРАДАК-2020
+          </p>
+          <a class="btn btn-outline-info" href="saradak\saradak.html" type="button" name="button">Больше</a>
+        </section>
+
+        <section class="article border p-5 m-5">
+          <div class="row article-header align-items-center">
+            <div class="col-5">
               <img src="images\saradak-participant.jpg" alt="Участник конкурса хөөмей">
             </div>
             <div class="col-7">
