--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -60,58 +60,42 @@
     <div class="container-fluid saradak-page py-3">
       <!-- header -->
       <div class="saradak-header">
-        <h2 class="page-header">Детский конкурс исполнителей хөөмей САРАДАК-2020</h2>
+        <h2 class="page-header">Детский конкурс исполнителей хөөмей МАРАЛЁНОК-2020</h2>
       </div>
       <!-- row -->
       <div class="row saradak-player justify-content-center">
           <!-- participants -->
           <div class="col-12 col-lg-4">
             <div class="participant-list">
-              <h5>Участники</h5>
+              <h5>УЧАСТНИКИ</h5>
               <ol>
-                <li class="participant">Хомушку Кан-Демир Радомирович</li>
-                <li class="participant">Чамбал Кудерек Дажынович</li>
-                <li class="participant">Аракчаа Угер Артышович</li>
-                <li class="participant">Ооржак Сергек Анчы-оолович</li>
-                <li class="participant">Куулар Кан-Демир Вадимович</li>
-                <li class="participant">Донгак Сайын-Белек Дашович</li>
-                <li class="participant">Монгуш Тамчат Радомирович</li>
-                <li class="participant">Демир-оол Аржаан Александрорвич</li>
-                <li class="participant">Шинин Алдынай Владьевна </li>
-                <li class="participant">Сагды Айдыс Артышович</li>
-                <li class="participant">Кунаажап Аяс Мергенович</li>
-                <li class="participant">Кужугет Синухед Станиславович</li>
-                <li class="participant">Аптыы Милан Альбертович</li>
-                <li class="participant">Серенот Кудерек Шолбанович</li>
-                <li class="participant">Монгуш Нарын-Белек Аясович</li>
-                <li class="participant">Тюлюш Айыс Валентинович</li>
-                <li class="participant">Чозуту Отчугаш Орланович </li>
-                <li class="participant">Суван Айыр-Санаа Мергенович</li>
-                <li class="participant">Чооду Шалбачы Начын Оглу </li>
-                <li class="participant">Чооду Окчаа Начын Оглу</li>
-                <li class="participant">Монгуш Айыс Анчыевич</li>
-                <li class="participant">Дамбыл Айслан Айдынович</li>
-                <li class="participant">Санчы Саян Адар-оолвич</li>
-                <li class="participant">Лапчар Очур Борисович</li>
-                <li class="participant">Нанзал Анчы-Кара Артурович</li>
-                <li class="participant">Монгуш Эртине Аясович</li>
-                <li class="participant">Энге Ай-Хаан Вадимович</li>
-                <li class="participant">Суктер Батый Эрендейевич</li>
-                <li class="participant">Ондар Шимит Леняевич</li>
-                <li class="participant">Ховалыг Аржаан Шыргай-оолович</li>
-                <li class="participant">Бегзи Очур Буянович</li>
-                <li class="participant">Минчей Аюш Владимирович</li>
-                <li class="participant">Натпит-оол Алтангэрэл Юрьевич</li>
-                <li class="participant">Ооржак Эритне Анчы-оолович</li>
-                <li class="participant">Сарыглар Ай-Маадыр Аликович</li>
-                <li class="participant">Чулдум-оол Айбес Айдынович</li>
+                <li class="participant">Хомушку Каң-Демир Радомирович <span class="age-origin-hide">7 лет, г.Кызыл</span></li>
+                <li class="participant">Чамбал Күдерек Дажынович <span class="age-origin-hide">12 лет, Тандиский район, с.Арыг-Бажы</span></li>
+                <li class="participant">Аракчаа Үгер Артышович <span class="age-origin-hide">6 лет, Чаа-Хольский район, с.Булун-Терек</span></li>
+                <li class="participant">Монгуш Аюш <span class="age-origin-hide"></span></li>
+                <li class="participant">Ооржак Сергек Анчы-оолович <span class="age-origin-hide">9 лет, г.Чадан</span></li>
+                <li class="participant">Ооржак Эртине Анчы-оолович <span class="age-origin-hide">13 лет, г.Чадан</span></li>
+                <li class="participant">Куулар Каң-Демир Вадимович <span class="age-origin-hide">12 лет, г.Чадан</span></li>
+                <li class="participant">Донгак Сайын-Белек Дашович <span class="age-origin-hide">12 лет, г.Чадан</span></li>
+                <li class="participant">Монгуш Тамчат Радомирович <span class="age-origin-hide">9 лет, г.Чадан</span></li>
+                <li class="participant">Монгуш Начын <span class="age-origin-hide"></span></li>
+                <li class="participant">Сарыглар Ай-Маадыр Аликович <span class="age-origin-hide">13 лет, Дзун-Хемчикский район, с.Чыраа-Бажы</span></li>
+                <li class="participant">Демир-оол Аржаан Александрорвич <span class="age-origin-hide">12 лет, Эрзинский район, с.Эрзин</span></li>
+                <li class="participant">Шинин Алдынай Владьевна <span class="age-origin-hide">12 лет, Эрзинский район, с.Эрзин</span></li>
+                <li class="participant">Сагды Айдыс Артышович <span class="age-origin-hide">11 лет, Эрзинский район, с.Эрзин</span></li>
+                <li class="participant">Кунажап Аяс Мергенович <span class="age-origin-hide">13 лет, Эрзинский район, с.Эрзин</span></li>
+                <li class="participant">Күжүгет Синухед Станиславович <span class="age-origin-hide">7 лет, Бай-Тайгиский район, с.Тээли</span></li>
+                <li class="participant">Аптыы Милан Альбертович <span class="age-origin-hide">13 лет, Бай-Тайгиский район, с.Тээли</span></li>
+                <li class="participant">Данзын Айдес <span class="age-origin-hide"></span></li>
+                <li class="participant">Серенот Күдерек Шолбанович <span class="age-origin-hide">13 лет, г.Кызыл</span></li>
+                <li class="participant">Хомушку Ай-хаан <span class="age-origin-hide"></span></li>
               </ol>
             </div>
           </div>
           <!-- video -->
           <div class="col-12 col-lg-8">
             <div class="video-box">
-              <iframe class="video" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class="video" src="" frameborder="0" rel="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
