--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
               <img src="images\saradak-bg.jpg" alt="Участник конкурса хөөмей">
             </div>
             <div class="col-7">
-              <h2>САРАДАК-2020</h2>
+              <h2>МАРАЛЁНОК-2020</h2>
               <p class="date">17.07.2020</p>
             </div>
           </div>
-          <p class="mt-3">Видео-выступления участников детского конкурса исполнителей хөөмей САРАДАК-2020
+          <p class="mt-3">Видео-выступления участников детского конкурса исполнителей хөөмей МАРАЛЁНОК-2020
           </p>
           <a class="btn btn-outline-info" href="saradak\saradak.html" type="button" name="button">Больше</a>
         </section>
