--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -70,7 +70,7 @@
               <h5>УЧАСТНИКИ</h5>
               <ol>
                 <li class="participant">Хомушку Каң-Демир Радомирович <span class="age-origin-hide">7 лет, г.Кызыл</span></li>
-                <li class="participant">Чамбал Күдерек Дажынович <span class="age-origin-hide">12 лет, Тандиский район, с.Арыг-Бажы</span></li>
+                <li class="participant">Чамбал Күдерек Дажынович <span class="age-origin-hide">12 лет, Тандинский район, с.Арыг-Бажы</span></li>
                 <li class="participant">Аракчаа Үгер Артышович <span class="age-origin-hide">6 лет, Чаа-Хольский район, с.Булун-Терек</span></li>
                 <li class="participant">Монгуш Аюш <span class="age-origin-hide"></span></li>
                 <li class="participant">Ооржак Сергек Анчы-оолович <span class="age-origin-hide">9 лет, г.Чадан</span></li>
@@ -84,8 +84,8 @@
                 <li class="participant">Шинин Алдынай Владьевна <span class="age-origin-hide">12 лет, Эрзинский район, с.Эрзин</span></li>
                 <li class="participant">Сагды Айдыс Артышович <span class="age-origin-hide">11 лет, Эрзинский район, с.Эрзин</span></li>
                 <li class="participant">Кунажап Аяс Мергенович <span class="age-origin-hide">13 лет, Эрзинский район, с.Эрзин</span></li>
-                <li class="participant">Күжүгет Синухед Станиславович <span class="age-origin-hide">7 лет, Бай-Тайгиский район, с.Тээли</span></li>
-                <li class="participant">Аптыы Милан Альбертович <span class="age-origin-hide">13 лет, Бай-Тайгиский район, с.Тээли</span></li>
+                <li class="participant">Күжүгет Синухед Станиславович <span class="age-origin-hide">7 лет, Бай-Тайгинский район, с.Тээли</span></li>
+                <li class="participant">Аптыы Милан Альбертович <span class="age-origin-hide">13 лет, Бай-Тайгинский район, с.Тээли</span></li>
                 <li class="participant">Данзын Айдес <span class="age-origin-hide"></span></li>
                 <li class="participant">Серенот Күдерек Шолбанович <span class="age-origin-hide">13 лет, г.Кызыл</span></li>
                 <li class="participant">Хомушку Ай-хаан <span class="age-origin-hide"></span></li>
