participant data updated

--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse justify-content-end mr-5" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mr-xl-5">
-            <a class="nav-link active" id="saradak" href="..\saradak\saradak.html">Маралёнок-2020</a>
+            <a class="nav-link active" id="saradak" href="..\saradak\saradak.html">Маралёнок</a>
           </li>
           <li class="nav-item mr-2">
             <a class="nav-link" href="..\index.html">Главная</a>
@@ -60,7 +60,7 @@
     <div class="container-fluid saradak-page py-3">
       <!-- header -->
       <div class="saradak-header">
-        <h2 class="page-header">Детский конкурс исполнителей хөөмей МАРАЛЁНОК-2020</h2>
+        <h2 class="page-header">Детский конкурс исполнителей хөөмей «МАРАЛЁНОК»</h2>
       </div>
       <!-- row -->
       <div class="row saradak-player justify-content-center">
@@ -72,13 +72,13 @@
                 <li class="participant">Хомушку Каң-Демир Радомирович <span class="age-origin-hide">7 лет, г.Кызыл</span></li>
                 <li class="participant">Чамбал Күдерек Дажынович <span class="age-origin-hide">12 лет, Тандинский район, с.Арыг-Бажы</span></li>
                 <li class="participant">Аракчаа Үгер Артышович <span class="age-origin-hide">6 лет, Чаа-Хольский район, с.Булун-Терек</span></li>
-                <li class="participant">Монгуш Аюш <span class="age-origin-hide"></span></li>
+                <li class="participant">Монгуш Аюш Энер-оолович<span class="age-origin-hide"></span></li>
                 <li class="participant">Ооржак Сергек Анчы-оолович <span class="age-origin-hide">9 лет, г.Чадан</span></li>
                 <li class="participant">Ооржак Эртине Анчы-оолович <span class="age-origin-hide">13 лет, г.Чадан</span></li>
                 <li class="participant">Куулар Каң-Демир Вадимович <span class="age-origin-hide">12 лет, г.Чадан</span></li>
                 <li class="participant">Донгак Сайын-Белек Дашович <span class="age-origin-hide">12 лет, г.Чадан</span></li>
                 <li class="participant">Монгуш Тамчат Радомирович <span class="age-origin-hide">9 лет, г.Чадан</span></li>
-                <li class="participant">Монгуш Начын <span class="age-origin-hide"></span></li>
+                <li class="participant">Монгуш Начын Алексеевич<span class="age-origin-hide">г.Чадан</span></li>
                 <li class="participant">Сарыглар Ай-Маадыр Аликович <span class="age-origin-hide">13 лет, Дзун-Хемчикский район, с.Чыраа-Бажы</span></li>
                 <li class="participant">Демир-оол Аржаан Александрорвич <span class="age-origin-hide">12 лет, Эрзинский район, с.Эрзин</span></li>
                 <li class="participant">Шинин Алдынай Владьевна <span class="age-origin-hide">12 лет, Эрзинский район, с.Эрзин</span></li>
@@ -86,9 +86,9 @@
                 <li class="participant">Кунажап Аяс Мергенович <span class="age-origin-hide">13 лет, Эрзинский район, с.Эрзин</span></li>
                 <li class="participant">Күжүгет Синухед Станиславович <span class="age-origin-hide">7 лет, Бай-Тайгинский район, с.Тээли</span></li>
                 <li class="participant">Аптыы Милан Альбертович <span class="age-origin-hide">13 лет, Бай-Тайгинский район, с.Тээли</span></li>
-                <li class="participant">Данзын Айдес <span class="age-origin-hide"></span></li>
+                <li class="participant">Данзын Айдес Эртине-Доржуевич<span class="age-origin-hide">14 лет, Эрзинский район, с.Эрзин</span></li>
                 <li class="participant">Серенот Күдерек Шолбанович <span class="age-origin-hide">13 лет, г.Кызыл</span></li>
-                <li class="participant">Хомушку Ай-хаан <span class="age-origin-hide"></span></li>
+                <li class="participant">Хомушку Ай-хаан Радомирович<span class="age-origin-hide">14 лет, г.Кызыл</span></li>
               </ol>
             </div>
           </div>
