--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -89,6 +89,46 @@
                 <li class="participant">Данзын Айдес Эртине-Доржуевич<span class="age-origin-hide">14 лет, Эрзинский район, с.Эрзин</span></li>
                 <li class="participant">Серенот Күдерек Шолбанович <span class="age-origin-hide">13 лет, г.Кызыл</span></li>
                 <li class="participant">Хомушку Ай-хаан Радомирович<span class="age-origin-hide">14 лет, г.Кызыл</span></li>
+                <li class="participant">Монгуш Нарын-Белек Аясович<span class="age-origin-hide">13 лет, Улуг-Хемский район, с.Хайыракан</span></li>
+                <li class="participant">Тюлюш Айыс Валентинович<span class="age-origin-hide">13 лет, Улуг-Хемский район, с.Хайыракан</span></li>
+                <li class="participant">Чозуту Отчугаш Орланович<span class="age-origin-hide">13 лет, Улуг-Хемсикй район, с.Хайыракан</span></li>
+                <li class="participant">Монгуш Аймир<span class="age-origin-hide"></span></li>
+                <li class="participant">Мандый-оол Айыс<span class="age-origin-hide">г.Шагонар</span></li>
+                <li class="participant">Суваң Айыр-Санаа Мергенович<span class="age-origin-hide">13 лет, г.Шагонар</span></li>
+                <li class="participant">Серин Кежик<span class="age-origin-hide">г.Шагонар</span></li>
+                <li class="participant">Куулар Дажням Радикович<span class="age-origin-hide">г.Чадан</span></li>
+                <li class="participant">Санчы Саян Адар-оолович<span class="age-origin-hide">10 лет, Кызылский район, с.Сукпак</span></li>
+                <li class="participant">Монгуш Ай-Херел Айдыңович<span class="age-origin-hide">Дзун-Хемчикский район</span></li>
+                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">Нанзал Аңчы-Кара Артурович<span class="age-origin-hide">12 лет, Тес-Хемский район, с.Самагалтай</span></li>
+                <li class="participant">Уштулаң Намдрол Аясович<span class="age-origin-hide">15 лет</span></li>
+                <li class="participant">Монгуш Эртине Аясович<span class="age-origin-hide">7 лет, г.Чадан</span></li>
+                <li class="participant">Энге Ай-Хаан Вадимович<span class="age-origin-hide">8 лет, г.Ак-Довурак</span></li>
+                <li class="participant">Сүктер Батый Эрендейевич<span class="age-origin-hide">12 лет, г.Ак-Довурак</span></li>
+                <li class="participant">Кара-Сал Дугар Аян-оолович<span class="age-origin-hide">г.Кызыл</span></li>
+                <li class="participant">Борбак Алдар<span class="age-origin-hide">Улуг-Хемский район, с.Арыскан</span></li>
+                <li class="participant">Ховалыг Аржаан Шыргай-оолович<span class="age-origin-hide">12 лет, Дзун-Хемчикский район, с.Бажын-Алаак</span></li>
+                <li class="participant">Сам Самына<span class="age-origin-hide"></span></li>
+                <li class="participant">Ондар Шимит Леняевич<span class="age-origin-hide">7 лет, Сут-Хольский район, с.Суг-Аксы</span></li>
+                <li class="participant">Сарыглар Батыр<span class="age-origin-hide"></span></li>
+                <li class="participant">Бады Доржу Мергенович<span class="age-origin-hide">Дзун-Хемчикский район, с.Бажын-Алаак</span></li>
+                <li class="participant">Монгуш Эдиски Оскал-оолович<span class="age-origin-hide">Дзун-Хемчикский район, с.Бажын-Алаак</span></li>
+                <li class="participant">Бегзи Очур Буянович<span class="age-origin-hide">10 лет, Тес-Хемский район, с.Самагалтай</span></li>
+                <li class="participant">Минчей Аюш Владимирович<span class="age-origin-hide">11 лет, Тес-Хемский район, с.Самагалтай</span></li>
+                <li class="participant">Натпит-оол Алтангэрэл Юрьевич<span class="age-origin-hide">13 лет, Тес-Хемский район, с.Самагалтай</span></li>
+                <li class="participant">Санчат Сергей<span class="age-origin-hide">17 лет</span></li>
+                <li class="participant">Дагба Энерел<span class="age-origin-hide">16 дет</span></li>
+                <li class="participant">Чүлдүм-оол Айбес Айдынович<span class="age-origin-hide">13 лет, Бай-Тайгинский район, с.Бай-Тал</span></li>
+                <li class="participant">Хертек Давырга Мерген-оолович<span class="age-origin-hide">16 лет, Бай-Тайгинский район</span></li>
               </ol>
             </div>
           </div>
