--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse justify-content-end mr-5" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mr-xl-5" id="saradak">
-            <a class="nav-link" href="saradak\saradak.html">Маралёнок-2020</a>
+            <a class="nav-link" href="saradak\saradak.html">Маралёнок</a>
           </li>
           <li class="nav-item mr-2">
             <a class="nav-link active" href="index.html">Главная</a>
@@ -85,11 +85,11 @@
               <img src="images\saradak-bg.jpg" alt="Участник конкурса хөөмей">
             </div>
             <div class="col-7">
-              <h2>МАРАЛЁНОК-2020</h2>
+              <h2>«МАРАЛЁНОК»</h2>
               <p class="date">17.07.2020</p>
             </div>
           </div>
-          <p class="mt-3">Видео-выступления участников детского конкурса исполнителей хөөмей МАРАЛЁНОК-2020
+          <p class="mt-3">Видео-выступления участников детского конкурса исполнителей хөөмей «МАРАЛЁНОК»
           </p>
           <a class="btn btn-outline-info" href="saradak\saradak.html" type="button" name="button">Больше</a>
         </section>
