--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -99,16 +99,16 @@
                 <li class="participant">Куулар Дажням Радикович<span class="age-origin-hide">г.Чадан</span></li>
                 <li class="participant">Санчы Саян Адар-оолович<span class="age-origin-hide">10 лет, Кызылский район, с.Сукпак</span></li>
                 <li class="participant">Монгуш Ай-Херел Айдыңович<span class="age-origin-hide">Дзун-Хемчикский район</span></li>
-                <li class="participant">n/a<span class="age-origin-hide"></span></li>
-                <li class="participant">n/a<span class="age-origin-hide"></span></li>
-                <li class="participant">n/a<span class="age-origin-hide"></span></li>
-                <li class="participant">n/a<span class="age-origin-hide"></span></li>
-                <li class="participant">n/a<span class="age-origin-hide"></span></li>
-                <li class="participant">n/a<span class="age-origin-hide"></span></li>
-                <li class="participant">n/a<span class="age-origin-hide"></span></li>
-                <li class="participant">n/a<span class="age-origin-hide"></span></li>
-                <li class="participant">n/a<span class="age-origin-hide"></span></li>
-                <li class="participant">n/a<span class="age-origin-hide"></span></li>
+                <li class="participant">Чооду Окчаа Начынович<span class="age-origin-hide">10 лет, г.Кызыл</span></li>
+                <li class="participant">Чооду Шалбачы Начынович<span class="age-origin-hide">8 лет, г.Кызыл</span></li>
+                <li class="participant">Чооду Мөгепей Начынович<span class="age-origin-hide">14 лет, г.Кызыл</span></li>
+                <li class="participant">Монгуш Айыс<span class="age-origin-hide">10 лет, г.Ак-Довурак</span></li>
+                <li class="participant">Чамбыл Айслан Айдыңович<span class="age-origin-hide">Монгун-Тайгинский район, с.Мугур-Аксы</span></li>
+                <li class="participant">Чамзы Айдаш Оптуг-оолович<span class="age-origin-hide">Монгун-Тайгинский район, с.Мугур-Аксы</span></li>
+                <li class="participant">Ооржак Найыр<span class="age-origin-hide"></span></li>
+                <li class="participant">Чамбыл Аржаан Дугул-оолович<span class="age-origin-hide">Монгун-Тайгинский район, с.Мугур-Аксы</span></li>
+                <li class="participant">Лапчар Очур<span class="age-origin-hide"></span></li>
+                <li class="participant">Нанзал Адыгжы Артурович<span class="age-origin-hide">16 лет, Тес-Хемский район, с.Самагалтай</span></li>
                 <li class="participant">Нанзал Аңчы-Кара Артурович<span class="age-origin-hide">12 лет, Тес-Хемский район, с.Самагалтай</span></li>
                 <li class="participant">Уштулаң Намдрол Аясович<span class="age-origin-hide">15 лет</span></li>
                 <li class="participant">Монгуш Эртине Аясович<span class="age-origin-hide">7 лет, г.Чадан</span></li>
@@ -126,7 +126,7 @@
                 <li class="participant">Минчей Аюш Владимирович<span class="age-origin-hide">11 лет, Тес-Хемский район, с.Самагалтай</span></li>
                 <li class="participant">Натпит-оол Алтангэрэл Юрьевич<span class="age-origin-hide">13 лет, Тес-Хемский район, с.Самагалтай</span></li>
                 <li class="participant">Санчат Сергей<span class="age-origin-hide">17 лет</span></li>
-                <li class="participant">Дагба Энерел<span class="age-origin-hide">16 дет</span></li>
+                <li class="participant">Дагба Энерел<span class="age-origin-hide">16 лет</span></li>
                 <li class="participant">Чүлдүм-оол Айбес Айдынович<span class="age-origin-hide">13 лет, Бай-Тайгинский район, с.Бай-Тал</span></li>
                 <li class="participant">Хертек Давырга Мерген-оолович<span class="age-origin-hide">16 лет, Бай-Тайгинский район</span></li>
               </ol>
