--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -135,6 +135,7 @@
           <!-- video -->
           <div class="col-12 col-lg-8">
             <div class="video-box">
+              <h2 class="page-header" style="background: none">ВЫБЕРИТЕ УЧАСТНИКА</h2>
               <iframe class="video" src="" frameborder="0" rel="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
