--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -129,6 +129,9 @@
                 <li class="participant">Дагба Энерел<span class="age-origin-hide">16 лет</span></li>
                 <li class="participant">Чүлдүм-оол Айбес Айдынович<span class="age-origin-hide">13 лет, Бай-Тайгинский район, с.Бай-Тал</span></li>
                 <li class="participant">Хертек Давырга Мерген-оолович<span class="age-origin-hide">16 лет, Бай-Тайгинский район</span></li>
+                <li class="participant">Цыдепов Жаргал<span class="age-origin-hide">Республика Бурятия</span></li>
+                <li class="participant">Ооржак Сайын-Белек<span class="age-origin-hide">г.Чадан</span></li>
+                <li class="participant">Куркаев Урмат<span class="age-origin-hide">Республика Алтай, Усть-Коксинский район, с.Сугаш</span></li>
               </ol>
             </div>
           </div>
