--- a/saradak/saradak.html
+++ b/saradak/saradak.html
@@ -137,11 +137,11 @@
                 </ol>
               </div>
             </div>
-            <div class="additional-material">
-              <h3>ДОПОЛНИТЕЛЬНЫЕ МАТЕРИАЛЫ</h3>
+            <div class="additional-materials-list">
+              <h3 style="font-size: 2rem;">ДОПОЛНИТЕЛЬНЫЕ МАТЕРИАЛЫ</h3>
               <div class="add-list">
                 <ul>
-                  <li class="participant">Методика обучения горловому пению - Андрей Алдын-оолович</li>
+                  <a href="#add-1"><li class="participant">Методика обучения горловому пению - Андрей Алдын-оолович</li></a>
                   <li class="participant">Мастер-класс по горловому пению - Аян-оол Сам</li>
                 </ul>
               </div>
@@ -156,6 +156,100 @@
           </div>
         </div>
      </div>
+
+      <!-- additional materials -->
+     <div class="container-fluid news-preview py-3">
+       <div class="row justify-content-center">
+         <section class="article col-lg-7 col-md-12 border p-5 mt-5" id="add-1">
+               <h2 style="background: #5f9c97; margin-bottom: 0.5em;">Урок хөөмей - ведёт Народный хөөмейжи Республики Тыва Монгуш Андрей Алдын-олович</h2>
+             <div class="video-container">
+               <iframe src="https://www.youtube.com/embed/faR8aJlVsOg" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+             </div>
+             <br>
+           <a class="btn btn-outline-info" href="#top" type="button" name="button">К конкурсу</a>
+           <a class="btn btn-outline-info" href="..\index.html" type="button" name="button">На главную</a>
+           </section>
+         </div>
+      </div>
+
+      <!-- <section class="jury-container row">
+        <div class="jury-card col-12 col-lg-5 col-xl-3">
+          <img src="..\images\jury-kaigal-ool.jpg" alt="" class="jury-photo">
+          <p class="jury-text">ХОВАЛЫГ КАЙГАЛ-ООЛ КИМ-ООЛОВИЧ – Председатель состава жюри.
+            Заслуженный артист РФ, Народный хөөмейжи РТ, один из основателей всемирно известной группы "Хүн-Хүртү", один из выдающихся музыкантов нашего времени, виртуоз тувинского горлового пения хөөмей.
+          </p>
+        </div>
+      </section> -->
+
+
+
+      <!-- footer -->
+      <footer class="page-footer font-small pt-4">
+      <div class="container-fluid text-center text-lg-left">
+        <div class="row">
+          <div class="col-lg-4 mt-md-0 mt-3">
+            <div class="row align-items-center">
+              <div class="col-4">
+                <img class="logo ml-5" src="..\images\hoomeyzhi.png" alt="">
+              </div>
+              <div class="col-8">
+                <h5 class="text-uppercase">Общественная организация</h5>
+                <p>«Союз исполнителей горлового пения хөөмей Республики Тыва»</p>
+              </div>
+            </div>
+          </div>
+          <hr class="clearfix w-100 d-md-none pb-3">
+          <div class="col-lg-3 mb-md-0 mb-3">
+            <h5 class="text-uppercase">Партнёры</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="http://tuvancenter.com">Центр развития тувинской традиционной культуры</a>
+              </li>
+              <li>
+                <a href="http://tnotuva.ru">ГБУ «Тувинский национальный оркестр»</a>
+              </li>
+              <li>
+                <a href="http://www.khoomey.ru">Международный научный центр «Хоомей»</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-5 mb-md-0 mb-3">
+            <h5 class="text-uppercase">Контакты</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <span>Адрес: 667000, Республика Тыва, г. Кызыл, ул. Ленина, д.7</span>
+              </li>
+              <li>
+                <div>Электронная почта:
+                  <a href="mailto:soyuz.khoomeyzhi@mail.ru"> soyuz.khoomeyzhi@mail.ru</a>
+                </div>
+              </li>
+              <li>
+                <div>Контактный телефон:
+                  <a href="tel:83942223571"> 8(39422)2–35-71</a>
+                </div>
+              </li>
+              <li>
+                <div>Зам.председателя Монгуш Адыгжы Кузен-оолович:
+                  <a href="tel:8-983—516-31-97"> 8(983)516-31-97</a>
+                </div>
+              </li>
+              <li>
+                <div>Координатор проекта Бадыраа Шурумаа Григорьевна:
+                  <a href="8-923-380-66-61"> 8(923)380-66-61</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="https://vk.com/tuvacenter"> Центр развития тувинской традиционной культуры</a>
+      </div>
+    </footer>
+    <!-- footer -->
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
