--- a/index.html
+++ b/index.html
@@ -82,6 +82,38 @@
         <section class="article border p-5 m-5">
           <div class="row article-header align-items-center">
             <div class="col-5">
+              <img src="images\saradak.jpg" alt="Афиша конкурса «Маралёнок»">
+            </div>
+            <div class="col-7">
+              <h2>Завершился прием заявок на участие в межрегиональном дистанционном детском конкурсе исполнителей тувинского горлового пения хөөмей «Маралёнок»</h2>
+              <p class="date">13.08.2020</p>
+            </div>
+          </div>
+          <p class="article-preview mt-3">Союз исполнителей горлового пения хөөмей Республики Тыва при поддержке Общероссийской общественно-государственной организации «Российский фонд культуры» в начале июля объявил о проведении Межрегионального дистанционного детского конкурса исполнителей тувинского горлового пения хөөмей «Мараленок». Заявочная компания начала свою работу с момента объявления конкурса, а заявки на участие отправили 64 участника из разных регионов Российской Федерации.
+            Сегодня началась непростая работа жюри, в состав которого входят заслуженные работки культуры и искусства, ученые, искусствоведы, известные исполнители тувинского горлового пения. Напомним, что Межрегиональный дистанционный детский конкурс исполнителей тувинского горлового пения хөөмей «Мараленок» проходит в рамках Международного детского фестиваля исполнителей горлового пения и проводится в целях развития и популяризации тувинского горлового пения, выявления и поддержки талантливых детей и их стимулирования к дальнейшей творческой активности; укрепления взаимопонимания и дружеских связей между детьми и молодежью. Для участия было необходимо своевременно и надлежащим образом подать заявку. Согласно Положению конкурса участник должен был предоставить видеозапись своего живого выступления, снятый одним дублем на статичную камеру (без признаков монтажа и склейки кадров) общей продолжительностью до 5 минут. Оцениваться присланные видеозаписи будут по нескольким критериям, среди которых – уровень исполнительского мастерства, репертуар, сценический вид, техника игры на традиционных музыкальных инструментах и тд.
+            Результаты конкурса будут объявлены 18 августа и размещены на официальном сайте Союза исполнителей горлового пения хөөмей Республики Тыва <a href="http://soyuz-khoomeizhi.ru/index.html">www.soyuz-khoomeizhi.ru</a>.
+          </p>
+          <a class="btn btn-outline-info" href="articles\maralyonok-close.html" type="button" name="button">Больше</a>
+        </section>
+
+        <section class="article border p-5 m-5">
+          <div class="row article-header align-items-center">
+            <div class="col-5">
+              <img src="images\aldyn-oolovich-lesson.jpg" alt="Участник конкурса хөөмей">
+            </div>
+            <div class="col-7">
+              <h2>Урок хөөмей</h2>
+              <p class="date">12.08.2020</p>
+            </div>
+          </div>
+          <p class="mt-3">Урок хөөмей - ведёт Народный хөөмейжи Республики Тыва Монгуш Андрей Алдын-олович
+          </p>
+          <a class="btn btn-outline-info" href="saradak\saradak.html#add-1" type="button" name="button">Больше</a>
+        </section>
+
+        <section class="article border p-5 m-5">
+          <div class="row article-header align-items-center">
+            <div class="col-5">
               <img src="images\saradak-bg.jpg" alt="Участник конкурса хөөмей">
             </div>
             <div class="col-7">
